After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735005 - gdk_drawable_get_screen() used for mask, which is a pixmap, not a window
gdk_drawable_get_screen() used for mask, which is a pixmap, not a window
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
2.24.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-08-18 17:09 UTC by Sebastian Gerhardt
Modified: 2014-08-21 01:46 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24


Attachments
Patch file (1018 bytes, patch)
2014-08-18 17:09 UTC, Sebastian Gerhardt
committed Details | Review

Description Sebastian Gerhardt 2014-08-18 17:09:00 UTC
Created attachment 283799 [details] [review]
Patch file

The function gtk_drag_set_icon_pixmap() triggered failing assertions. This was because it called the function gdk_window_get_screen(mask), where "mask" is a pixmap, but not a window.

This will lead to error messages such as:
Gdk-CRITICAL **: IA__gdk_window_get_screen: assertion
'GDK_IS_WINDOW (window)' failed

Gtk-CRITICAL **: IA__gtk_drag_set_icon_pixmap: assertion '!
mask || gdk_window_get_screen (mask) == screen' failed



I include a patch for 2.24.24.